BUCKET NAME UPDATED

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -20,4 +20,4 @@ jobs:
           aws-region: us-east-1
 
       - name: Deploy Static Site to S3 Bucket
-        run: aws s3 sync . s3://www.s3.shubhampokhrel.com.np --delete
+        run: aws s3 sync . s3://s3yachumila  --delete
